plane/clusters/homelab/apps/children/plane/plane-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-ingress
  namespace: plane
spec:
  ingressClassName: traefik   # or nginx
  rules:
    - host: plane.homelab
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: plane-app-web
                port:
                  number: 3000

          - path: /spaces
            pathType: Prefix
            backend:
              service:
                name: plane-app-space
                port:
                  number: 3000

          - path: /god-mode
            pathType: Prefix
            backend:
              service:
                name: plane-app-admin
                port:
                  number: 3000

          - path: /live
            pathType: Prefix
            backend:
              service:
                name: plane-app-live
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: plane-app-api
                port:
                  number: 8000

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: plane-app-api
                port:
                  number: 8000

          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: plane-app-minio
                port:
                  number: 9000
